tests/js_error/source_locations/destructure/member/set_property.exp
Error: 
  at set foo (tests/js_error/source_locations/destructure/member/set_property.js:3:11)
  at <global> (tests/js_error/source_locations/destructure/member/set_property.js:7:4)
