tests/js_error/source_locations/destructure/member/set_property.js
var obj = {
  set foo(_) {
    throw new Error();
  }
};

({ x: obj['fo' + 'o'] } = { x: 1 });